Centered logo and added padding to the top

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
     <head>
         <title>Google</title>
     </head>
-
+    <style>
+        .logo {
+            display:block;
+            margin: 0 auto 0;
+        }
+    </style>
     <body>
 
-        <h1>Testing</h1>
-
-        <p>My first paragraph.</p>
-
+        <div>
+            <img class="logo" alt="Google" src="Google_Logo.png" style="padding-top: 109px; width:272;">
+        </div>
     </body>
 </html>
