--- a/index.html
+++ b/index.html
@@ -4,15 +4,46 @@
         <title>Google</title>
     </head>
     <style>
-        .logo {
+        img {
+            height: 92px;
+            aspect-ratio: auto 272 / 92;
+            width: 272px;
+        }
+        a:first-of-type {
+            margin-left: 15px;
+        }
+        .heading {
+            display: inline-block;
+
+        }
+        .center {
             display:block;
             margin: 0 auto 0;
         }
+        .searchfield {
+            background: #fff;
+            display: flex;
+            border-radius: 24px;
+            border: 1px solid #dfe1e5;
+            box-shadow: none;
+            height: 44px;
+            margin: 0 auto;
+            width: 482px;
+        }
     </style>
     <body>
-
-        <div>
-            <img class="logo" alt="Google" src="Google_Logo.png" style="padding-top: 109px; width:272;">
+        <div class="heading">
+            <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
+            <a href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
+            <a href="https://mail.google.com/mail/?authuser=0&ogbl">Gmail</a>
+            <a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Images</a>
         </div>
+        <div class="content">
+            <img class="center" alt="Google" src="Google_Logo.png" 
+            style="padding-top: 109px; width:272;">
+        
+            <input class="center searchfield" maxlength="2048" name="q" 
+            title="search" style="margin-top: 20px;">
+    </div>
     </body>
 </html>
