--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
             font-size: 20px;
             color: gray;
         }
+        .footer {
+            position: fixed;
+            display: flex;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #f2f2f2;
+            color: white;
+            text-align: center;
+        }
     </style>
     <body>
         <ul class="top_links left_links">
@@ -57,12 +67,24 @@
         <ul class="top_links right_links">
             <li><a class="right_links" href="https://mail.google.com/mail/?authuser=0&ogbl">Gmail</a></li>
             <li><a class="right_links" href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Images</a></li>
-            <li><a class=right_links" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Sign In</a></li>
+            <li><a class="right_links" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Sign In</a></li>
         </ul>
         <div class="content">
             <img class="center" alt="Google" src="Google_Logo.png" style="padding-top:109px; padding-left:50px; width:272px;">
         
             <input class="center searchfield" maxlength="2048" name="q" title="search" style="margin-top: 20px; padding-left: 10px;" value="Search">
+        </div>
+        <div class="footer">
+            <ul>
+                <li><a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
+                <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a></li>
+                <li><a href="https://google.com/search/howsearchworks/?fg=1">How Search Works</a></li>
+            </ul>
+            <ul>
+                <li><a href="https://policies.google.com/privacy?hl=en&fg=1">Privacy</a></li>
+                <li><a href="https://policies.google.com/terms?hl=en&fg=1">Terms</a></li>
+                <li><a href="/">Settings</a></li>
+            </ul>
         </div>
     </body>
 </html>
