--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
             display:flex;
             margin: 0 auto 0;
         }
+        .content {
+            margin: 0;
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
         .searchfield {
             background: #fff;
             border-radius: 24px;
@@ -94,11 +102,11 @@
 
 
         <div class="content">
-            <img class="center" alt="Google" src="Google_Logo.png" style="padding-top:200px; padding-left:50px; width:272px;">
+            <img class="center" alt="Google" src="Google_Logo.png" style="width:272px;">
         
             <input class="center searchfield" maxlength="2048" name="q" title="search" style="margin-top: 20px; padding-left: 10px;" value="Search">
-            <input class="center search_button" type="button" value="Google Search" style="float: left; margin: 25px 0 0 500px;">
-            <input class="center search_button" type="button" value="I'm Feeling Lucky" style="float: right; margin: 25px 500px 0 0;">
+            <input class="center search_button" type="button" value="Google Search">
+            <input class="center search_button" type="button" value="I'm Feeling Lucky">
         </div>
 
 
