--- a/index.html
+++ b/index.html
@@ -85,12 +85,11 @@
             margin: 30px 150px 0 0;
         }
         .footer {
-            position: fixed;
+            position:absolute;
             left: 0;
             bottom: 0;
-            width: 100%;
+            width: 96.8%;
             background-color: #f2f2f2;
-            color: white;
             text-align: center;
             padding: 15px 30px;
         }
