--- a/index.html
+++ b/index.html
@@ -87,15 +87,13 @@
             float: right;
             margin: 30px 150px 0 0;
         }
-        .footer {
+        #footer {
             position:absolute;
             left: 0;
             bottom: 0;
-            width: 98.4%;
+            width: 97.9%;
             background-color: #f2f2f2;
-            text-align: center;
-            padding: 10px;
-            display: block;
+            padding: 0 20px 15px 20px;
         }
         .bottom_left_links {
             float: left;
@@ -131,9 +129,9 @@
         </div>
 
 
-        <div class="footer">
+        <div id="footer">
             <ul>
-                <li><a class="bottom_left_links" href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
+                <li><a class="bottom_left_links" href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1" style="margin-left: -20px;">Advertising</a></li>
                 <li><a class="bottom_left_links" href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a></li>
                 <li><a class="bottom_left_links" href="https://google.com/search/howsearchworks/?fg=1">How Search Works</a></li>
             </ul>
